2005-09-14  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc: The histogram plot style was not being listed as an
	option under 'help plotting styles'.

2005-09-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c src/axis.h src/color.c src/gadgets.c src/gadgets.c
	src/graph3d.c src/graphics.c src/save.c src/set.c src/show.c src/term.c
	src/unset.c:
	Up till now gnuplot's axis labels, plot title, and timestamp have been
	stored in statically allocated instances of struct label_struct.
	All other labels use dynamically allocated struct text_label.
	This set of changes converts all users of struct label_struct to use
	stucture text_label instead. This saves space everywhere, and
	consolidates the label parsing and handling routines.
	
	* docs/gnuplot.doc NEWS:
	The y and y2 axis labels now allow explicit control over rotation angle;
	all labels now allow explicit control over {no}enhanced text processing.

2005-09-12  Bastian Maerkisch  <bmaerkisch@web.de>

	* config/config.nt: Rearranged to comply with config.{h,cyg,mgw,os2}.

2005-09-11  Ethan Merritt  <merritt@u.washington.edu>

	* src/save.c (save_set_all): Fix incorrect placement of newlines
	in "set pm3d" options.

2005-09-09  Lars Hecking  <lhecking@users.sourceforge.net>

	* Makefile.am: Add DISTCLEANFILES.

	* lisp/Makefile.am: Add $(ELS) to distclean-local target.

	* share/LaTeX/Makefile.am: Install .cfg file under gnuplot's directory
	hierarchy rather than LaTeX's - it is the user's responsibility to
	update the latter. Add uninstall-hook.

2005-09-09  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/config.nt: Added flags for GP_ISVAR, libPDF details,
	HAVE_STRINGIZE, string variables, datastrings, histograms, fit
	error variables, image mode, macros.  Added at least some
	comments.

2005-09-08  Hans-Bernhard Broeker  <broeker@physik.rwth-aachen.de>

	* config/makefile.nt: Add a rule that makes all *.obj files