@@ -70,6 +70,7 @@ Most of these plots were generated using the PNG terminal type:</p>
     <h4>Colors</h4>
     <li><a href="dashcolor.html">dashcolor</a></li>
     <li><a href="rainbow.html">rainbow</a></li>
+    <li><a href="rgb_variable.html">rgb_variable</a></li>
     <li><a href="pm3dcolors.html">pm3dcolors</a></li>
     <li><a href="pm3dgamma.html">pm3dgamma</a></li>
 
@@ -120,7 +121,7 @@ Most of these plots were generated using the PNG terminal type:</p>
 <tbody><tr valign="top">
 
     <td>
-    <i>generated by Ethan Merritt<br>Aug 2005</i>
+    <i>generated by Ethan Merritt<br>September 2005</i>
     </td>
 
     <td>
@@ -132,8 +133,6 @@ Most of these plots were generated using the PNG terminal type:</p>
     
     <td>
     <ul>
-    <li><a href="http://www.gnuplot.info/">Old (version 3.7.3) gnuplot home page</a></li>
-    <li><a href="http://www.gnuplot.info/faq/">Old (version 3.7.3) FAQ</a></li></li>
     </ul>
     </td>
     
