@@ -1,3 +1,11 @@
+2005-09-15  Ethan Merritt  <merritt@u.washington.edu>
+
+	* demo/html/Makefile demo/html/index.save: Add rgb_variable.dem to the
+	autogenerated html set.  Also add dashcolor.dem, which is complicated
+	by needing to generate an *.eps file and then convert it to *.png.
+	
+	* demo/all.dem: Add rainbow.dem and rgb_variable.dem
+
 2005-09-14  Ethan Merritt  <merritt@u.washington.edu>
 
 	* docs/gnuplot.doc: The histogram plot style was not being listed as an
